--- a/config.json
+++ b/config.json
@@ -7,27 +7,27 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "627abcdb627cb1789e009c08e2678ef9",
+      "uid": "d090355c31f497b61d676416c1fd39fb",
       "css": "twitter",
-      "code": 59396,
-      "src": "fontawesome"
+      "code": 59392,
+      "src": "entypo"
+    },
+    {
+      "uid": "d94334f23acba022bfd68e49d76b31bb",
+      "css": "github",
+      "code": 59393,
+      "src": "entypo"
+    },
+    {
+      "uid": "b945f4ac2439565661e8e4878e35d379",
+      "css": "gplus",
+      "code": 59394,
+      "src": "entypo"
     },
     {
       "uid": "2ec1790207a8ba67a7192c6af1eafec4",
       "css": "steam",
-      "code": 59394,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "b8d0c7d76e87b94882329a88e8e43d3d",
-      "css": "gplus",
-      "code": 59393,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "5e0a374728ffa8d0ae1f331a8f648231",
-      "css": "github",
-      "code": 59392,
+      "code": 59395,
       "src": "fontawesome"
     }
   ]
