--- a/config.json
+++ b/config.json
@@ -1,34 +1,33 @@
 {
-  "name": "",
-  "css_prefix_text": "icon-",
-  "css_use_suffix": false,
-  "hinting": true,
-  "units_per_em": 1000,
-  "ascent": 850,
-  "glyphs": [
-    {
-      "uid": "d090355c31f497b61d676416c1fd39fb",
-      "css": "twitter",
-      "code": 59392,
-      "src": "entypo"
-    },
-    {
-      "uid": "d94334f23acba022bfd68e49d76b31bb",
-      "css": "github",
-      "code": 59393,
-      "src": "entypo"
-    },
-    {
-      "uid": "b945f4ac2439565661e8e4878e35d379",
-      "css": "gplus",
-      "code": 59394,
-      "src": "entypo"
-    },
-    {
-      "uid": "2ec1790207a8ba67a7192c6af1eafec4",
-      "css": "steam",
-      "code": 59395,
-      "src": "fontawesome"
-    }
-  ]
+    "name": "",
+    "css_prefix_text": "icon-",
+    "css_use_suffix": false,
+    "hinting": true,
+    "units_per_em": 1000,
+    "ascent": 850,
+    "glyphs": [{
+            "uid": "d090355c31f497b61d676416c1fd39fb",
+            "css": "twitter",
+            "code": 59392,
+            "src": "entypo"
+        },
+        {
+            "uid": "d94334f23acba022bfd68e49d76b31bb",
+            "css": "github",
+            "code": 59393,
+            "src": "entypo"
+        },
+        {
+            "uid": "b945f4ac2439565661e8e4878e35d379",
+            "css": "gplus",
+            "code": 59394,
+            "src": "entypo"
+        },
+        {
+            "uid": "2ec1790207a8ba67a7192c6af1eafec4",
+            "css": "steam",
+            "code": 59395,
+            "src": "fontawesome"
+        }
+    ]
 }
